data/derived/sp14/progs/unify/prog4897.ml.out
Characters 85-86:
  | (c,d::t) -> (c,c+t) in
                     ^
Error: This expression has type 'a list
       but an expression was expected of type int
